--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>vsbeats.ru</h1>
+<html>
+  <head>
+    <title>vsbeats.ru</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
+  </head>
+  <body>
+    <h1>vsbeats.ru</h1>
+  </body>
+</html>
