--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
   </head>
   <body>
-    <h1>vsbeats.ru</h1>
+    <div class="ui container">
+      <h1>vsbeats.ru</h1>
+      <small>Contact: mail@vvsmirnov.ru</small>
+    </div>
   </body>
 </html>
